[gd_scene load_steps=11 format=3 uid="uid://ciqdfunppbbpm"]

[ext_resource type="Texture2D" uid="uid://b2ls3vw23alms" path="res://interface/sprites/Weapon.png" id="1_7bl73"]
[ext_resource type="Script" path="res://interface/scripts/InventoryItemCard.gd" id="1_jrpvw"]
[ext_resource type="Texture2D" uid="uid://btwf2vffq2igq" path="res://interface/sprites/Weight.png" id="2_xcufq"]
[ext_resource type="Texture2D" uid="uid://d07ljqlouva2n" path="res://interface/sprites/Gold.png" id="3_q0gsf"]
[ext_resource type="Texture2D" uid="uid://vhx86outocmp" path="res://interface/sprites/Copper.png" id="4_2xml4"]
[ext_resource type="Texture2D" uid="uid://dkdum4iw1nbf4" path="res://interface/sprites/Count.png" id="4_k2lpa"]
[ext_resource type="Script" path="res://interface/scripts/LimitButtonName.gd" id="5_8qs0b"]
[ext_resource type="Texture2D" uid="uid://dce6aqx316x7g" path="res://interface/sprites/Silver.png" id="5_lsgls"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i5svm"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.376471)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jklr4"]

[node name="InventoryItemCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1180.0
offset_bottom = -960.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jrpvw")

[node name="BGPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 740.0
offset_bottom = 120.0
theme_override_styles/panel = SubResource("StyleBoxFlat_i5svm")

[node name="CountLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 15.0
offset_right = 550.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CategoryImage" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 50.0
offset_top = 25.0
offset_right = 150.0
offset_bottom = 125.0
scale = Vector2(0.7, 0.7)
mouse_filter = 2
texture = ExtResource("1_7bl73")
stretch_mode = 3

[node name="WeightLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 450.0
offset_top = 65.0
offset_right = 550.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "10"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WeightImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 72.0
offset_right = 605.0
offset_bottom = 117.0
scale = Vector2(0.6, 0.6)
mouse_filter = 2
texture = ExtResource("2_xcufq")

[node name="CountImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 560.0
offset_top = 23.0
offset_right = 605.0
offset_bottom = 68.0
scale = Vector2(0.6, 0.6)
mouse_filter = 2
texture = ExtResource("4_k2lpa")

[node name="ItemNameButton" type="Button" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 35.0
offset_right = 520.0
offset_bottom = 85.0
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_jklr4")
theme_override_styles/hover = SubResource("StyleBoxTexture_jklr4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jklr4")
theme_override_styles/disabled = SubResource("StyleBoxTexture_jklr4")
theme_override_styles/focus = SubResource("StyleBoxTexture_jklr4")
text = "Посох Короля Личей"
script = ExtResource("5_8qs0b")

[node name="MoneyContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 595.0
offset_right = 710.0
offset_bottom = 120.0
theme_override_constants/separation = 35

[node name="Copper" type="Control" parent="MoneyContainer"]
layout_mode = 2

[node name="CopperLabel" type="Label" parent="MoneyContainer/Copper"]
layout_mode = 0
offset_top = 5.0
offset_right = 70.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "10"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CopperImage" type="TextureRect" parent="MoneyContainer/Copper"]
layout_mode = 0
offset_left = 80.0
offset_top = 12.0
offset_right = 125.0
offset_bottom = 57.0
scale = Vector2(0.6, 0.6)
mouse_filter = 2
texture = ExtResource("4_2xml4")

[node name="Silver" type="Control" parent="MoneyContainer"]
layout_mode = 2

[node name="SilverLabel" type="Label" parent="MoneyContainer/Silver"]
layout_mode = 0
offset_top = 5.0
offset_right = 70.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "10"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SilverImage" type="TextureRect" parent="MoneyContainer/Silver"]
layout_mode = 0
offset_left = 80.0
offset_top = 12.0
offset_right = 125.0
offset_bottom = 57.0
scale = Vector2(0.6, 0.6)
mouse_filter = 2
texture = ExtResource("5_lsgls")

[node name="Golden" type="Control" parent="MoneyContainer"]
custom_minimum_size = Vector2(115, 50)
layout_mode = 2

[node name="GoldenLabel" type="Label" parent="MoneyContainer/Golden"]
layout_mode = 0
offset_top = 5.0
offset_right = 70.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "10"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GoldenImage" type="TextureRect" parent="MoneyContainer/Golden"]
layout_mode = 0
offset_left = 80.0
offset_top = 12.0
offset_right = 125.0
offset_bottom = 57.0
scale = Vector2(0.6, 0.6)
mouse_filter = 2
texture = ExtResource("3_q0gsf")
